[gd_scene load_steps=4 format=3 uid="uid://ci07kmlcbdods"]

[ext_resource type="Theme" uid="uid://co0uqk7ayhahb" path="res://Assets/UI/UI_Theme.tres" id="1_0b60w"]
[ext_resource type="Script" uid="uid://6oalgbwrjoww" path="res://Source/Scripts/main_menu.gd" id="1_buprd"]
[ext_resource type="Texture2D" uid="uid://dxmfftr32spu0" path="res://Assets/UI/UI.png" id="3_u6s1b"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0b60w")
script = ExtResource("1_buprd")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 29.0
offset_right = -18.0
offset_bottom = -280.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_u6s1b")
region_rect = Rect2(168, 96, 87, 75)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = 76.0
offset_right = -39.0
offset_bottom = -1022.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_u6s1b")
region_rect = Rect2(270, 96, 87, 75)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.5
offset_top = -279.0
offset_right = 216.5
offset_bottom = 129.875
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 7
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 7
theme_override_font_sizes/font_size = 40
text = "Options"

[node name="PlaceholderButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 7
theme_override_font_sizes/font_size = 40
text = "no, we haven't programmed these buttons"
autowrap_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -216.0
offset_top = 74.0
offset_right = 216.0
offset_bottom = 175.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 83
text = "SPRITEBOUND"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PlaceholderButton" to="." method="_on_placeholder_button_pressed"]
